@@ -238,7 +238,8 @@ extern "C" {
 #define BUF_AUDIO_14_4		0x03230000
 #define BUF_AUDIO_28_8		0x03240000
 #define BUF_AUDIO_SIPRO		0x03250000
-#define BUF_AUDIO_WMAV3		0x03260000
+#define BUF_AUDIO_WMAPRO	0x03260000
+#define BUF_AUDIO_WMAV3	BUF_AUDIO_WMAPRO
 #define BUF_AUDIO_INTERPLAY	0x03270000
 #define BUF_AUDIO_XA_ADPCM	0x03280000
 #define BUF_AUDIO_WESTWOOD	0x03290000
