@@ -79,7 +79,11 @@ xine-lib (1.1.18) 20??-??-??
     Only the Ogg demuxer knows about these at present.
   * Added basic support for .qtl (Quicktime media link).
   * "Fixed" playback of 24-bit FLAC.
+  * Fixed playback of 24-bit LPCM.
   * Work around an ffmpeg bug concerning Sorenson Video 3.
+  * Flash audio bug fixes, mostly concerning AAC.
+  * Fix DXR3 support for newer versions of the em8300 driver.
+  * Added support for WMA Pro.
 
 xine-lib (1.1.17) 2009-12-01
   * Add support for Matroska SIMPLEBLOCK.
